[tool.poetry]
name = "novak"
version = "0.1.0"
description = ""
authors = ["Omar Ali Sheikh <sheikhomar@users.noreply.github.com>"]
license = "MIT"
include = [
    "README.md",
    "pyproject.toml",
    "LICENSE"
]

[tool.poetry.dependencies]
python = "3.8.13"
numba = "^0.56.0"
scikit-learn = "^1.1.1"
seaborn = "^0.11.2"
pandas = "^1.4.3"
click = "^8.1.3"
gensim = "^4.2.0"
sentence-transformers = "^2.2.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.2"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
black = "^22.6.0"
dvc = "^2.15.0"
PyDrive2 = "^1.14.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
